<resources>
    <string name="app_name">AyC</string>
    <string name="txtname">Nombre:</string>
    <string name="txtApellido">Apellido:</string>
    <string name="txtuser">Usuario:</string>
    <string name="txtpassword">Contraseña:</string>
    <string name="txtmail">Correo:</string>

    <string name="txtBtnSingIng">Enviar</string>
    <string name="txtBtnAuctions">Subastas</string>
    <string name="txtBtnNew">Nuevos</string>
    <string name="txtBtnCategories">Categorias</string>

    <string name="txtEscogidosParati">Escogidos para ti</string>
    <string name="txtDeAcuerdo">De acuerdo a los artículos buscados</string>
    <string name="txtNAcualizacion">Nuevas Actualizaciones</string>
    <string name="txtDeNActualizacion">Últimos articulos agregados</string>
    <string name="txtVerMas">Ver más</string>
    <string name="agregar">Agregar</string>

    <string name="txtItemName">Nombre del articulo</string>
    <string name="txtDescription">Descripción</string>
    <string name="txtItemDesc">Descripción del artículo seleccionado</string>
    <string name="txtPrice">Precio</string>
    <string name="correo">Correo</string>
    <string name="textoOpciones">Opciones</string>
    <string-array name="tags">
        <item>monedas</item>
        <item>figuras de accion</item>
        <item>comics</item>
        <item>videojuegos</item>
        <item>pinturas</item>
        <item>autos</item>
        <item>otros</item>
    </string-array>

    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>

</resources>
