<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ayc.coleccionistas.Home"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/icon"
        android:layout_marginTop="33dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/buttonSing" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtname"
        android:textColor="@color/Brown_AC"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/editTextName"
        android:labelFor="@id/editTextName"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:gravity="center_vertical"
        android:ems="10"
        android:textColor="@color/Brown_AC"
        android:singleLine="false"
        android:layout_below="@+id/textViewName"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtpassword"
        android:textColor="@color/Brown_AC"
        android:layout_below="@+id/editTextName"
        android:layout_alignStart="@+id/editTextName"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/textViewPassword"
        android:layout_alignStart="@+id/textViewPassword"
        android:textColor="@color/Brown_AC" />

    <Button
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txtBtnSingIng"
    android:id="@+id/buttonSing"
    android:onClick="Longin"
    android:textColor="@color/Brown_AC"
    android:singleLine="true"
    android:background="@drawable/btn"
    android:layout_below="@+id/editTextPassword"
    android:layout_toEndOf="@+id/textViewPassword" />

    <TextView
        android:id="@+id/Sin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="SingIng"
        android:text="SingIn?"

        android:textColor="@color/Brown_AC"
        android:layout_below="@+id/buttonSing"
        android:layout_alignEnd="@+id/editTextPassword" />

</RelativeLayout>
